# svfm-weatherai

./: .gitignore  .pylintrc  README.md  config.example.yaml  pyproject.toml  weatherbulletin.py
.github/workflows/: python-app.yml
