[tool.poetry]
name = "svfm-weatherai"
version = "1.1.0"
description = ""
authors = ["Matt Ribbins <matt@mattribbins.co.uk>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
google-cloud = "^0.34.0"
google = "^3.0.0"
pyyaml = "^6.0.1"
google-api-core = "^2.19.0"
google-cloud-texttospeech = "^2.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
